frontend/tests/cases/negative/deriving/drop.gr
nope : forall {s : Protocol} . LChan s -> ()
nope = drop @(LChan s)