frontend/tests/cases/negative/deriving/drop.gr.output
Type checking failed: 
Type constraint error: frontend/tests/cases/negative/deriving/drop.gr:1:1:
Constraint `Dropable (LChan s)` does not hold or is not provided by the type constraint assumptions here.